Revert "Get rid of FunctionalUtils.java". Brings back Functional.java to make the diff easier to digest. It will be replaced with redoing c58b6587b3b4fb9c08afd27eacf139e0ed9afb83 commit in the next PR.
This reverts commit c58b6587b3b4fb9c08afd27eacf139e0ed9afb83.